--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
                 <div id="parameters">
                     <div class="select">
                         &#128467;
-                        <span class="text1">Select a date</span>
-                        <input type="date" class="text1" required>
+                        <span class="text">Select a date</span>
+                        <input type="date" class="text" required>
                     </div>
                     <div class="select">
                         &#x1F552;
-                        <span class="text1">Select a time</span>
-                        <input type="time" class="text1" required>
+                        <span class="text">Select a time</span>
+                        <input type="time" class="text" required>
                     </div>
                     <div class="select">
                         &#x263B;
-                        <span class="text1">Select guests</span>
-                        <input type="number" class="text1" placeholder="1" max="8" required>
+                        <span class="text">Select guests</span>
+                        <input type="number" class="text" placeholder="1" max="8" required>
                     </div>
                 </div>
                 <input type="submit">
-                <label for="button" id="button-label" class="text1 border">
-                    <span class="text1">Book now!</span>
+                <label for="button" id="button-label" class="text border">
+                    <span class="text">Book now!</span>
                 </label>
             </article>
         </section>
@@ -58,7 +58,7 @@
         <!-- our story -->
         <section id="our-story">
             <img src="broken-paper-edited.png" alt="" class="separator1">
-            <article class="content-on-black-bgc text1">
+            <article class="content-on-black-bgc text">
                 <h2>Our story</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus temporibus, molestias in minima quibusdam veritatis necessitatibus, voluptates porro consequuntur quod rem id maiores eius autem accusamus. Assumenda laudantium asperiores voluptate.</p>
             </article>
@@ -74,7 +74,7 @@
                 <div class="ne-image">
                     <img src="event-heart-min.jpg" alt="">
                 </div>
-                <div class="text1 content">
+                <div class="text content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim est ea, commodi iure labore hic error sed expedita aliquid praesentium. Quae quam laborum animi necessitatibus eum mollitia sapiente aspernatur reiciendis.</p>
                 </div>
             </article>
@@ -84,7 +84,7 @@
                 <div class="ne-image">
                     <img src="event-glass-min.jpg" alt="" class="ne-image">
                 </div>
-                <div class="text1 content">
+                <div class=" content">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea tempora atque quaerat, modi suscipit deleniti nobis ducimus laboriosam non minus aliquam perspiciatis officiis delectus autem placeat praesentium reprehenderit, voluptatem rem.</p>
                 </div>
             </article>
@@ -94,7 +94,7 @@
                 <div class="ne-image">
                     <img src="event-karaoke-min.jpg" alt="" class="ne-image">
                 </div>
-                <div class="text1 content">
+                <div class="text content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quas, temporibus vero tempora porro quaerat commodi sed repellat inventore, laborum pariatur reiciendis dicta. At beatae facere dignissimos suscipit, esse quisquam!</p>
                 </div>
             </article>
@@ -104,9 +104,9 @@
         <section id="contact-us">
             <img src="broken-paper-edited.png" alt="" class="separator1">
             <article>
-                <div id="address" class="text1">&#x1F588;12 Lorem, 11-111 Ipsum</div>
-                <div id="phone" class="text1">&#x1F57E;Phone: +123456789</div>
-                <div id="email" class="text1">&#x1F4E7;E-mail: email@email.com</div>
+                <div id="address" class="text">&#x1F588;12 Lorem, 11-111 Ipsum</div>
+                <div id="phone" class="text">&#x1F57E;Phone: +123456789</div>
+                <div id="email" class="text">&#x1F4E7;E-mail: email@email.com</div>
                 <figcaption>
                     Background photo by <a href="https://unsplash.com/@empowers_photography?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Emily Powers</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     
