--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                 <h2 class="border">Book a table</h2>
                 <div id="parameters">
                     <div class="select">
-                        &#128467;
+                        <div class="icon">&#128467;</div>
                         <span class="text">Select a date</span>
                         <input type="date" class="text" required>
                     </div>
                     <div class="select">
-                        &#x1F552;
+                        <div class="icon">&#x1F552;</div>
                         <span class="text">Select a time</span>
                         <input type="time" class="text" required>
                     </div>
                     <div class="select">
-                        &#x263B;
+                        <div class="icon">&#128483;</div>
                         <span class="text">Select guests</span>
                         <input type="number" class="text" placeholder="1" max="8" required>
                     </div>
