--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href=""><img src="logo3.png" alt="" ></a>
         <label for="menu">&#9776;</label>
         <nav>
+            <a href="#">Menu</a>
             <a href="#">Our story</a>
             <a href="#">News & Events</a>
             <a href="#">Contact us</a>
