--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <a href=""><img src="logo3.png" alt="" ></a>
         <label for="menu">&#9776;</label>
         <nav>
-            <a href="#">Menu</a>
-            <a href="#">Our story</a>
-            <a href="#">News & Events</a>
-            <a href="#">Contact us</a>
+            <a href="#menu-img">Menu</a>
+            <a href="#our-story">Our story</a>
+            <a href="#news-events">News & Events</a>
+            <a href="#contact-us">Contact us</a>
         </nav>
     </header>
     <main>
